; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_adsp.c_adsp_set_clkrate.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/dream/qdsp5/extr_adsp.c_adsp_set_clkrate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.msm_adsp_module = type { i64 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @adsp_set_clkrate(%struct.msm_adsp_module* %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.msm_adsp_module*, align 8
  %5 = alloca i64, align 8
  store %struct.msm_adsp_module* %0, %struct.msm_adsp_module** %4, align 8
  store i64 %1, i64* %5, align 8
  %6 = load %struct.msm_adsp_module*, %struct.msm_adsp_module** %4, align 8
  %7 = getelementptr inbounds %struct.msm_adsp_module, %struct.msm_adsp_module* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %19

10:                                               ; preds = %2
  %11 = load i64, i64* %5, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %19

13:                                               ; preds = %10
  %14 = load %struct.msm_adsp_module*, %struct.msm_adsp_module** %4, align 8
  %15 = getelementptr inbounds %struct.msm_adsp_module, %struct.msm_adsp_module* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %5, align 8
  %18 = call i32 @clk_set_rate(i64 %16, i64 %17)
  store i32 %18, i32* %3, align 4
  br label %22

19:                                               ; preds = %10, %2
  %20 = load i32, i32* @EINVAL, align 4
  %21 = sub nsw i32 0, %20
  store i32 %21, i32* %3, align 4
  br label %22

22:                                               ; preds = %19, %13
  %23 = load i32, i32* %3, align 4
  ret i32 %23
}

declare dso_local i32 @clk_set_rate(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
